service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: NodePort
  selector:
    app: weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
